force-app/main/default/objects/DefinicionComision__c/DefinicionComision__c.object-meta.xml
<CustomObject>
    <label>Definición Comisión</label>
    <nameField>
        <displayFormat>DEFC-{0000}</displayFormat>
        <label>Nombre de Definición Comisión</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Definiciones comisión</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>