force-app/main/default/objects/DefinicionComision__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la definición está vigente o no debe ser tenida en cuenta</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>