force-app/main/default/objects/DefinicionComision__c/fields/PorcentajeContrato__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeContrato__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Porcentaje de comisión para hito de Contrato</description>
    <label>% Contrato</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>