force-app/main/default/objects/DefinicionComision__c/fields/PorcentajeEscrituracion__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeEscrituracion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Porcentaje de comisión para hito de Escrituración</description>
    <label>% Escrituración</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>