force-app/main/default/objects/DefinicionComision__c/fields/PorcentajePosventa__c.field-meta.xml
<CustomField>
    <fullName>PorcentajePosventa__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Porcentaje de comisión para hito de Posventa</description>
    <label>% Posventa</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>