force-app/main/default/objects/DefinicionComision__c/fields/PorcentajeReserva__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeReserva__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Porcentaje de comisión para hito de Reserva</description>
    <label>% Reserva</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>