force-app/main/default/objects/DefinicionComision__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Promoción para la que se establece la definición</description>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Definiciones comisión</relationshipLabel>
    <relationshipName>DefinicionesComisionPromocion</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>