force-app/main/default/objects/DefinicionComision__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Vendedor al que afecta la definición</description>
    <label>Vendedor</label>
    <referenceTo>Vendedor__c</referenceTo>
    <relationshipLabel>Definiciones comisión</relationshipLabel>
    <relationshipName>DefinicionesComision</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>