force-app/main/default/objects/DefinicionComision__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Año de vigencia de la definición</description>
    <label>Año</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Years</valueSetName>
    </valueSet>
</CustomField>